2011-01-07  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/testutils.c: add -c <count> option to run tests more than
	  once

2011-01-07  Francis Galiegue <fgaliegue@gmail.com>
	* testutils.c: create a run_one_test() function The way to run a test
	  is the same, whether we fork() or not. Make that a function.

2011-01-06  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/testutils.c: testutils.c: externalize test behaviour
	  variables

2011-01-06  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/amflock-test.c common-src/event-test.c
	  common-src/fileheader-test.c common-src/hexencode-test.c
	  common-src/ipc-binary-test.c common-src/match-test.c
	  common-src/quoting-test.c: Ensure all tests return gbooleans.  Most,
	  if not all, tests returned ints, and quite a few of them returned TRUE
	  or FALSE. While the effect is basically the same as a gboolean, make
	  all tests return a gboolean for coherency, since this is what
	  callinfork() expects anyway.
	* common-src/testutils.c: Also enforce that callinfork() return that
	  type, which, in turn, allows the "success" local variable in
	  testutil_run_tests() to also be converted.

2011-01-06  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/testutils.c: convert ints to gbooleans where appropriate;
	  run_all, tu_debugging_enabled and ignore_timeouts are all used as
	  gbooleans in the code even though they are declared as ints. Convert
	  them to booleans, and also change declarations.

2011-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.pod: new offset and size arguments of xfer->start.
	* perl/Amanda/Xfer.swg: Add xfer_element_set_size.

2011-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-source-recovery.c: Never send more than the number
	  of bytes requested.
	* perl/Amanda/Xfer.swg (xfer_start): New offset and size arguments.
	* xfer-src/xfer-element.c: Add set_size method.
	* xfer-src/xfer-element.h (XferElement): Add size field.